--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -6,5 +6,12 @@
 
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    // background-color: #f9f9f9;
+    background: #0D1117;
+    color: white;
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+    // font-size: 1.2rem;
 }
